--- a/practica/index.html
+++ b/practica/index.html
@@ -5,20 +5,34 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>AppDeGatos</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
+  <div id="contenedor-principal">
+    <div class="rectangulo px">200px de Ancho</div>
+    <div class="rectangulo vw">20vw de Ancho</div>
+    <div class="rectangulo em">15em de Ancho</div>
+  </div>
+  <h2 id="title-app-cat">AppDeGatos</h2>
   <main>
     <p>Haz click aqui para mas <a href="https://www.freecodecamp.org" target="_blank" rel="noopener noreferrer">imagenes
         de gatitos.</a> </p>
+
     <a href="#parrafo-1">Parrafo 1</a>
     <a href="#parrafo-2">Parrafo 2</a>
     <a href="#parrafo-3">Parrafo 3</a>
     <a href="#parrafo-4">Parrafo 4</a>
+    <h3>Imagenes de Gatos:</h3>
+    <div>
 
-    <a href="https://www.freecodecamp.org" target="_blank" rel="noopener noreferrer"><img src="https://bit.ly/fcc-relaxing-cat" alt="cat-image"></a>
+      <a href="https://www.freecodecamp.org" target="_blank" rel="noopener noreferrer"><img
+          src="https://bit.ly/fcc-relaxing-cat" class="cat-img" alt="cat-image"></a>
+    </div>
 
     <h3 id="parrafo-1">Parrafo 1</h3>
 
@@ -55,7 +69,61 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil cumque nulla non at accusantium sunt. Tenetur
       magnam placeat et commodi similique velit nisi, quam dolor, deleniti quasi ratione magni ipsam.</p>
 
+    <hr>
+    <h3>Lista de Gatos</h3>
+
+    <div class="list-container">
+      <p>Cosas que los gatos <em>aman.</em> </p>
+      <ul id="lista-gatos-aman">
+        <li>Menta gatuna</li>
+        <li>Apuntadores Laser</li>
+        <li> <s>Lasana</s> </li>
+      </ul>
+
+      <p>Cosas que los gatos <strong>odian:</strong> </p>
+      <ol id="lista-gatos-odian">
+        <li>Tratamientos antipulgas</li>
+        <li>Truenos</li>
+        <li>Otros gatos</li>
+      </ol>
+    </div>
+
+
+
+
+    <img id="cat-img" src="img/cat-img.jpg" alt="">
+    <form action="/enviar-respuesta">
+      <label for="interior">
+        <input name="interior-exterior" value="interior" id="interior" type="radio" checked> Interior
+      </label>
+      <br>
+      <label for="exterior">
+        <input name="interior-exterior" value="exterior" id="exterior" type="radio">Exterior
+      </label>
+      <br>
+
+      <!-- Cassillas de Verificacion -->
+      <label for="carinoso">
+        <input name="personalidad" value="carinoso" id="carinoso" type="checkbox" checked>Carinoso
+      </label>
+      <br>
+      <label for="perezoso">
+        <input name="personalidad" value="perezoso" id="perezoso" type="checkbox">Perezoso
+      </label>
+      <br>
+      <label for="energico">
+        <input name="personalidad" value="energico" id="energico" type="checkbox">Energico
+      </label>
+      <br>
+      <!-- Texto y Boton Enviar -->
+      <input type="text" name="" id="" placeholder="URL de la foto de tu gato" required><br>
+      <button type="submit">Enviar</button>
+    </form>
   </main>
+  <hr>
+  <footer>
+    <p><small> Sin Derechos de Autor - <a href="#" target="_blank">Lignum bootcamp</a> </small></p>
+  </footer>
 
 </body>
 
