--- a/00-HTML-CSS-basics/0.1-HTML5/gastos.html
+++ b/00-HTML-CSS-basics/0.1-HTML5/gastos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -15,7 +15,7 @@
   <a href="#">
     <p>Gastos</p>
   </a>
-  <a href="">
+  <a href="media.html">
     <p>Media</p>
   </a>
   <h1>Gastos 2023</h1>
