--- a/00-HTML-CSS-basics/0.1-HTML5/index.html
+++ b/00-HTML-CSS-basics/0.1-HTML5/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -10,15 +10,28 @@
 
 <body>
   <h1>Hola mundo</h1>
-  <a href="#"><p>Inicio</p></a>
-  <a href="gastos.html"><p>Gastos</p></a>
-  <h2>Mi lista de tareas pendientes</h2>
-  <ol>
-    <li>Topic 1: JavaScript, y DOM APIs</li>
-    <li>Topic 2: Patrones de Diseño y Programacion Orientada a Objectos en JavaScript</li>
-    <li>Topic 3: MVC - Laravel</li>
-    <li>Topic 4: HTML5 APIs</li>
-  </ol>
+  <a href="#">
+    <p>Inicio</p>
+  </a>
+  <a href="gastos.html">
+    <p>Gastos</p>
+  </a>
+  <a href="media.html">
+    <p>Media</p>
+  </a>
+  <a href="registro.html">
+    <p>Registro</p>
+  </a>
+  <main>
+    <h2>Mi lista de tareas pendientes</h2>
+    <ol>
+      <li>Topic 1: JavaScript, y DOM APIs</li>
+      <li>Topic 2: Patrones de Diseño y Programacion Orientada a Objectos en JavaScript</li>
+      <li>Topic 3: MVC - Laravel</li>
+      <li>Topic 4: HTML5 APIs</li>
+    </ol>
+
+  </main>
 </body>
 
 </html>
