--- a/00-HTML-CSS-basics/0.1-HTML5/media.html
+++ b/00-HTML-CSS-basics/0.1-HTML5/media.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Media</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Media</title>
 </head>
+
 <body>
-    
+  <a href="index.html">
+    <p>Inicio</p>
+  </a>
+  <a href="gastos.html">
+    <p>Gastos</p>
+  </a>
+  <a href="#">
+    <p>Media</p>
+  </a>
+  <main>
+
+    <img src="img/logo.png" alt="Logo de Lignum Software">
+
+    <video controls>
+      <source src="video/lignum-video.mp4" type="video/mp4">
+    </video>
+    <figure>
+      <figcaption>Escucha esa maravilla de soundtrack:</figcaption>
+      <audio src="audio/Battlefield 3 Soundtrack  Main Theme.mp3" controls></audio>
+    </figure>
+  </main>
+
 </body>
+
 </html>
