--- a/00-HTML-CSS-basics/0.1-HTML5/gastos.html
+++ b/00-HTML-CSS-basics/0.1-HTML5/gastos.html
@@ -18,6 +18,9 @@
   <a href="media.html">
     <p>Media</p>
   </a>
+  <a href="registro.html">
+    <p>Registro</p>
+  </a>
   <h1>Gastos 2023</h1>
   <table style="border: 1px solid #dddddd">
     <tr>
