--- a/00-HTML-CSS-basics/0.1-HTML5/media.html
+++ b/00-HTML-CSS-basics/0.1-HTML5/media.html
@@ -18,6 +18,9 @@
   <a href="#">
     <p>Media</p>
   </a>
+  <a href="registro.html">
+    <p>Registro</p>
+  </a>
   <main>
 
     <img src="img/logo.png" alt="Logo de Lignum Software">
