--- a/00-HTML-CSS-basics/0.1-HTML5/registro.html
+++ b/00-HTML-CSS-basics/0.1-HTML5/registro.html
@@ -50,8 +50,13 @@
         </select>
       </label>
       <br>
+      <label for="biografia">
+        Biografia:<textarea name="biografia" id="biografia" cols="30" rows="10"></textarea>
+      </label>
+      <br>
 
       <button type="submit">Enviar</button>
+      <button type="reset">Borrar</button>
 
     </form>
   </main>
