--- a/00-HTML-CSS-basics/0.2.3-Especificidad/index.html
+++ b/00-HTML-CSS-basics/0.2.3-Especificidad/index.html
@@ -30,11 +30,11 @@
   <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
   <script src="js/app.js"></script>
 
-  <header> Soy el header principal </header>
-  <nav>Soy el NAV </nav>
+  <header class="header"> Soy el header principal </header>
+  <nav class="navigation">Soy el NAV </nav>
   <main>
     
-    <section>
+    <section class="content">
       <header>Soy el header interno</header>
       <article>
         Soy el Articulo
@@ -45,11 +45,11 @@
     </section>
   </main>
 
-  <aside>
+  <aside class="sidebar">
     Soy el aside
   </aside>
 
-  <footer>
+  <footer class="footer">
     Soy el footer principal
   </footer>
 
