Actividad 4 - Agregado UL

--- a/01-JS-DOM-APIs/04-Obtencion-de-Datos-por-Parametros/index.html
+++ b/01-JS-DOM-APIs/04-Obtencion-de-Datos-por-Parametros/index.html
@@ -28,9 +28,9 @@
       <article>soy el article de la section</article>
       <footer>soy el foot de la section</footer>
     </section>
-    <button onclick='chuckApiCall("hola mundo")'>soy un boton</button>
+    <button onclick='githubRepos()'>Obtener Repos</button>
   </main>
-  <aside class="sidebar">
+  <aside class="sidebar" id="sidebar">
     Soy el aside
   </aside>
   <hr>
@@ -38,11 +38,3 @@
 </body>
 
 </html>
-
-<script>
-  function click2(msg) {
-    console.log(msg)
-    console.log("Realice un click");
-    alert("hiciste click en el boton");
-  }
-</script>
