--- a/01-JS-DOM-APIs/04-Obtencion-de-Datos-por-Parametros/index.html
+++ b/01-JS-DOM-APIs/04-Obtencion-de-Datos-por-Parametros/index.html
@@ -31,6 +31,8 @@
     <button onclick='githubRepos()'>Obtener Repos</button>
   </main>
   <aside class="sidebar" id="sidebar">
+    <input id="searchBar" type="text" name="search" onchange="handleChange(value)" placeholder="Buscar repo...">
+    <br>
     Soy el aside
   </aside>
   <hr>
